# notypehints

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  fuzz_test.py  main.py  pyproject.toml  test_main.py  tox.ini
.github/: dependabot.yml
.github/workflows/: audit.yml  autoupdate-hooks.yml  fuzzy-testing.yml  mutation-tests.yml  pytest-coverage.yml
src/notypehints/: main.py
tests/fuzz/: fuzz_test.py
tests/samples/: sample_bad.js  sample_bad.yml  sample_in.py  sample_out.py
tests/unit/: main_test.py  test_main.py
