[project]
name = "notypehints"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
# watch atheris after 3.0.0 - that might enable >=3.12
requires-python = ">=3.10.20,<3.12.0"
dependencies = [
    "urllib3>=2.7.0",
]

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=3.5.0",
    "pytest>=9.1.1",
    "black>=24.8.0",
    "pre-commit-hooks>=5.0.0",
    "pytest-cov>=5.0.0",
    "flake8>=7.1.1",
    "isort>=5.13.2",
    "pip-audit>=2.10.1",
    "atheris<3.0.0",
    "mutmut>=3.6.0",
    "hypothesis>=6.155.3",
]

[tool.black]
line-length = 79

[tool.pytest]
testpaths = [
  "tests/unit"
]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:",
]
omit = [
    "fuzz_test.py"
]

[tool.isort]
profile = "black"
line_length = 79
